--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "graphql": "^16.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
+    "react-responsive-masonry": "^2.2.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@tanstack/router-vite-plugin": "^1.38.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-responsive-masonry": "^2.1.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
