--- a/package.json
+++ b/package.json
@@ -1,46 +1,43 @@
 {
-  "name": "veganmeetup_rewrite",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.10.5",
-    "@public-ui/components": "^2.1.2",
-    "@public-ui/react": "^2.1.2",
-    "@public-ui/themes": "^2.1.2",
-    "@tanstack/react-router": "^1.38.1",
-    "@types/apollo-upload-client": "^18.0.0",
-    "add-to-calendar-button-react": "^2.6.18",
-    "apollo-upload-client": "^18.0.1",
-    "gql.tada": "^1.7.6",
-    "graphql": "^16.8.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
-    "react-multi-carousel": "^2.8.5",
-    "react-responsive-masonry": "^2.2.0",
-    "styled-components": "^6.1.11"
-  },
-  "devDependencies": {
-    "@0no-co/graphqlsp": "^1.12.8",
-    "@tanstack/router-devtools": "^1.38.1",
-    "@tanstack/router-vite-plugin": "^1.38.0",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@types/react-responsive-masonry": "^2.1.3",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  }
+	"name": "veganmeetup_rewrite",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@apollo/client": "^3.10.5",
+		"@tanstack/react-router": "^1.38.1",
+		"@types/apollo-upload-client": "^18.0.0",
+		"add-to-calendar-button-react": "^2.6.18",
+		"apollo-upload-client": "^18.0.1",
+		"gql.tada": "^1.7.6",
+		"graphql": "^16.8.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^5.2.1",
+		"react-multi-carousel": "^2.8.5",
+		"react-responsive-masonry": "^2.2.0",
+		"styled-components": "^6.1.11"
+	},
+	"devDependencies": {
+		"@0no-co/graphqlsp": "^1.12.8",
+		"@tanstack/router-devtools": "^1.38.1",
+		"@tanstack/router-vite-plugin": "^1.38.0",
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"@types/react-responsive-masonry": "^2.1.3",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"typescript": "^5.2.2",
+		"vite": "^5.2.0"
+	}
 }
