--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
 		"apollo-upload-client": "^18.0.1",
 		"gql.tada": "^1.7.6",
 		"graphql": "^16.8.2",
+		"leaflet": "^1.9.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.2.1",
+		"react-leaflet": "^4.2.1",
 		"react-multi-carousel": "^2.8.5",
 		"react-responsive-masonry": "^2.2.0",
 		"styled-components": "^6.1.11"
@@ -28,6 +30,7 @@
 		"@0no-co/graphqlsp": "^1.12.8",
 		"@tanstack/router-devtools": "^1.38.1",
 		"@tanstack/router-vite-plugin": "^1.38.0",
+		"@types/leaflet": "^1.9.12",
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
 		"@types/react-responsive-masonry": "^2.1.3",
